# comic_agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: index.html
docs/images/moses/: manifest.json  moses.txt
docs/images/rapunzel/: manifest.json  rapunzel.txt
docs/images/tortoise/: manifest.json
docs/images/with_scene_fixes_10/: manifest.json
docs/images/with_scene_fixes_3/: manifest.json
docs/images/with_scene_fixes_4/: manifest.json
skills/commit-message-format/: SKILL.md
skills/commit-message-format/agents/: openai.yaml
skills/commit-message-format/scripts/: format_commit_message.py
src/comic_agent/: __init__.py  cli.py
src/comic_agent/agents/character_agent/: __init__.py  agent.py
src/comic_agent/agents/continuity_agent/: __init__.py  agent.py
src/comic_agent/agents/ingest_agent/: __init__.py  agent.py
src/comic_agent/agents/manager/: agent.py
src/comic_agent/agents/panel_agent/: __init__.py  agent.py
src/comic_agent/agents/scene_agent/: __init__.py  agent.py
src/comic_agent/agents/style_agent/: __init__.py  agent.py
src/comic_agent/agents/validator_agent/: __init__.py  agent.py
src/comic_agent/core/: errors.py  io_utils.py  logging_utils.py  models.py  rules.py  settings.py
tests/: test_character_agent.py  test_manager_integration.py  test_panel_agent.py  test_scene_agent.py  test_validation_failure_path.py  test_validator_agent.py
